--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand topnav" href="#">Design-it</a>
+                <a class="navbar-brand topnav" href="index.html">Design-it</a>
                 <!--<img  src="img/logo.png" alt="LOGO" style="width:30px;height:30px;">-->
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -59,10 +59,10 @@
                         <a href="#contact">Contact</a>
                     </li>
                     <li>
-                        <a href="">Sign up</a>
+                        <a href="login/signup.html">Sign up</a>
                     </li>
                     <li>
-                        <a href="">Log in</a>
+                        <a href="login/login.html">Log in</a>
                     </li>
                 </ul>
             </div>
@@ -91,7 +91,7 @@
                                
                             </li>
                             <li>
-                                <a href="" class="btn btn-default btn-lg"> <span class="network-name">Let's begin!</span></a>
+                                <a href="webpage/test.html" class="btn btn-default btn-lg"> <span class="network-name">Let's begin!</span></a>
                             </li>
                             <li>
                               
@@ -117,11 +117,15 @@
                 <div class="col-lg-5 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">Death to the Stock Photo:<br>Special Thanks</h2>
+                    <h2 class="section-heading">Looking to design your space,but not sure how to get started?</h2>
+                    <p class="lead">Design-it is your one-stop shop!</p>
+
+                    <!--
                     <p class="lead">A special thanks to <a target="_blank" href="http://join.deathtothestockphoto.com/">Death to the Stock Photo</a> for providing the photographs that you see in this template. Visit their website to become a member.</p>
+                    -->
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="img/ipad.png" alt="">
+                    <img class="img-responsive" src="img/intro1.jpg" alt="">
                 </div>
             </div>
 
@@ -139,11 +143,27 @@
                 <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">3D Device Mockups<br>by PSDCovers</h2>
-                    <p class="lead">Turn your 2D designs into high quality, 3D product shots in seconds using free Photoshop actions by <a target="_blank" href="http://www.psdcovers.com/">PSDCovers</a>! Visit their website to download some of their awesome, free photoshop actions!</p>
+                    <h2 class="section-heading">Step by Step</h2>
+                    <p class="lead">
+                    <ul>
+                        <li>
+                            Determine your interior design style with our quiz.
+                        </li>
+                        <li>
+                            Choose your designer. Upload photos, floor plans, and dimensions. (or choose to pursue your interior design endeavor on your own!)
+                        </li>
+                        <li>
+                            Work with your designer or follow other users as inspiration for your space.
+                        </li>
+                        <li>
+                            Order everything within your budget and at the best quality.
+                        </li>
+
+                    </ul>
+                </p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <img class="img-responsive" src="img/dog.png" alt="">
+                    <img class="img-responsive" src="img/intro2.jpg" alt="">
                 </div>
             </div>
 
@@ -161,11 +181,32 @@
                 <div class="col-lg-5 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">Google Web Fonts and<br>Font Awesome Icons</h2>
-                    <p class="lead">This template features the 'Lato' font, part of the <a target="_blank" href="http://www.google.com/fonts">Google Web Font library</a>, as well as <a target="_blank" href="http://fontawesome.io">icons from Font Awesome</a>.</p>
+                    <h2 class="section-heading">Our team</h2>
+                    <p class="lead">
+                        <ul>
+                            <li>
+                                Albert Blanco
+                            </li>
+                            <li>
+                                Julie Harr
+                            </li>
+                            <li>
+                                Melissa Tran
+                            </li>
+                            <li>
+                                Hao Wang
+                            </li>
+                            <li>
+                                Boyi Wu
+                            </li>
+
+                        </ul>
+
+
+                    </p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="img/phones.png" alt="">
+                    <img class="img-responsive" src="img/ourteam.png" alt="">
                 </div>
             </div>
 
